After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 667705 - fix up GtkApplication on OS X
fix up GtkApplication on OS X
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Class: GtkApplication
unspecified
Other All
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2012-01-11 17:00 UTC by Dan Winship
Modified: 2012-01-11 18:01 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
GtkApplication: fix/simplify OS X implementation (4.15 KB, patch)
2012-01-11 17:00 UTC, Dan Winship
committed Details | Review
GtkApplication: add inhibitor dialog under OS X (5.30 KB, patch)
2012-01-11 17:00 UTC, Dan Winship
committed Details | Review
testlogout: actually quit if told to (978 bytes, patch)
2012-01-11 17:00 UTC, Dan Winship
committed Details | Review

Description Dan Winship 2012-01-11 17:00:05 UTC
see patches. The inhibit dialog implementation is pretty minimal...
Comment 1 Dan Winship 2012-01-11 17:00:07 UTC
Created attachment 205028 [details] [review]
GtkApplication: fix/simplify OS X implementation

Make the OS X implementation compile, and remove the code that was
only needed to support user interaction during the quit request.
Comment 2 Dan Winship 2012-01-11 17:00:10 UTC
Created attachment 205029 [details] [review]
GtkApplication: add inhibitor dialog under OS X

Since OS X doesn't have an inhibitors API, we need to display the
inhibit reason ourselves.
Comment 3 Dan Winship 2012-01-11 17:00:13 UTC
Created attachment 205030 [details] [review]
testlogout: actually quit if told to
Comment 4 Matthias Clasen 2012-01-11 17:32:13 UTC
Review of attachment 205028 [details] [review]:

looks great to me, thanks
Comment 5 Matthias Clasen 2012-01-11 17:33:22 UTC
Review of attachment 205029 [details] [review]:

Looks good
Comment 6 Matthias Clasen 2012-01-11 17:33:49 UTC
Review of attachment 205030 [details] [review]:

Yes, thanks.
Comment 7 Matthias Clasen 2012-01-11 17:37:16 UTC
Review of attachment 205030 [details] [review]:

Yes, thanks.
Comment 8 Dan Winship 2012-01-11 18:01:31 UTC
Attachment 205028 [details] pushed as 7afc708 - GtkApplication: fix/simplify OS X implementation
Attachment 205029 [details] pushed as 05c484d - GtkApplication: add inhibitor dialog under OS X
Attachment 205030 [details] pushed as 9c7d795 - testlogout: actually quit if told to